input/opentelemetry-operator/manifests/sourced/Namespace_opentelemetry-operator-system.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: opentelemetry-operator
    control-plane: controller-manager
  name: opentelemetry-operator-system
