input/opentelemetry-operator/manifests/sourced/Service_opentelemetry-operator-controller-manager-metrics-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: opentelemetry-operator
    control-plane: controller-manager
  name: opentelemetry-operator-controller-manager-metrics-service
  namespace: opentelemetry-operator-system
spec:
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: opentelemetry-operator
    control-plane: controller-manager
