input/opentelemetry-operator/manifests/sourced/Service_opentelemetry-operator-webhook-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: opentelemetry-operator
  name: opentelemetry-operator-webhook-service
  namespace: opentelemetry-operator-system
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    app.kubernetes.io/name: opentelemetry-operator
    control-plane: controller-manager
